fixed white space

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --block-color: #0c0c0c;
     --border-color: #2b2b2b;
     --highlight: #ffba00;
-    --left-space: 0.6em;
+    --left-space: 1.6em;
 
 }
 
@@ -27,18 +27,18 @@ body {
 }
 
 #titleheader {
+    display: block;
     animation-name: fadeIn;
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     font-size: 4.5vh;
     margin-left: 30%;
-    display: inline-block;
 }
 
 #profile {
     font-size: 1.2em;
-    padding-left: 1.6em;
+    padding-left: var(--left-space);
     padding-top: 1em;
 }
 
@@ -53,18 +53,16 @@ header {
     backdrop-filter: blur(32px);
     -webkit-backdrop-filter: blur(32px);
     top: 0;
+    padding: 0.2em 0 0.2em 0;
     width: 100%;
     height: 8%;
-    padding: 0;
-    padding-left: var(--left-space);
-    padding-right: 0.6em;
-    font-size: 1.4em;
     z-index: 1;
 }
 
 header > h3 {
     display: inline-block;
     font-size: 2vh;
+    padding: 0 0 0 var(--left-space);
 }
 
 header > a {
@@ -115,7 +113,7 @@ aside {
     border-right: 3px dashed var(--border-color);
 }
 
-aside > span {
+nav > span {
     padding: 1em;
     font-size: 2em;
     font-weight: bolder;
@@ -140,6 +138,7 @@ nav > a {
     padding-left: var(--left-space);
     text-decoration: none;
     padding: 1.6em;
+    padding-left: var(--left-space);
 }
 
 nav > a:hover {
@@ -160,6 +159,7 @@ nav > a:hover {
 }
 
 p {
+    display: block;
     opacity: 0;
     animation-name: fadeIn;
     animation-duration: 1s;
@@ -201,7 +201,7 @@ button:hover {
     cursor:pointer;
     position: absolute;
     bottom: 1em;
-    left: 2em;
+    left: var(--left-space);
     width: 12em;
     font-size: 0.8em;
 }
